--- a/framework/css/utilities.css
+++ b/framework/css/utilities.css
@@ -2,36 +2,108 @@
 * Text Alignment
 ---------------------------------------------*/
 .text-left{
-    text-align: left;
+	text-align: left;
 }
 
 .text-right{
-    text-align: right;
+	text-align: right;
 }
 
 .text-center{
-    text-align: center;
+	text-align: center;
 }
 
 .text-justify{
-    text-align: justify;
+	text-align: justify;
 }
 
 /*---------------------------------------------
 * Rounded Edges
 ---------------------------------------------*/
 .border-radius{
-    border-radius: 4px;
+	border-radius: 4px;
 }
 
 .border-radius-2x{
-    border-radius: 8px;
+	border-radius: 8px;
 }
 
 .border-radius-3x{
-    border-radius: 16px;
+	border-radius: 16px;
 }
 
 .border-radius-100{
-    border-radius: 100%;
+	border-radius: 100%;
 }
+
+/*---------------------------------------------
+* Marking Style
+---------------------------------------------*/
+.brand{
+	padding: 0px 3px;
+}
+
+.brand-background{
+	background: #e6e600;
+	color: #999900;
+}
+
+/*---------------------------------------------
+* Text transform
+---------------------------------------------*/
+.text-lowercase {
+	text-transform: lowercase;
+}
+
+.text-uppercase {
+	text-transform: uppercase;
+}
+
+.text-italic{
+	font-style: italic;
+}
+
+.text-bold{
+	font-weight: bold;
+}
+
+.text-normal{
+	font-style: normal;
+	text-decoration
+}
+
+.text-overline{
+	text-decoration: overline;
+}
+
+.text-line-through{
+	text-decoration: line-through;
+}
+
+.text-underline{
+	text-decoration: underline;
+}
+
+.text-underline-overline{
+	text-decoration: underline overline;
+}
+
+/*---------------------------------------------
+* Elements visible And invisible And show And hiddle
+---------------------------------------------*/
+.element-visible{
+    visibility: visible !important;
+}
+
+.element-invisible{
+    visibility: hidden !important;
+}
+
+.element-show{
+    display: block;
+}
+
+.element-hiddle{
+    display: none;
+}
+
