--- a/framework/css/components.css
+++ b/framework/css/components.css
@@ -44,3 +44,55 @@
 	margin: 17px;
 	border-radius: 3px; 
 }
+
+/*---------------------------------------------
+* table Component
+---------------------------------------------*/
+.table{
+
+}
+
+.table-tr{
+
+}
+
+.table-tr:nth-child(even){
+
+}
+
+.table-tr:nth-child(odd){
+
+} 
+
+.table-th{
+
+}
+
+.table-thead{
+
+}
+
+.table-td{
+
+}
+
+/*---------------------------------------------
+* checkbox Component
+---------------------------------------------*/
+.checkbox{
+
+}
+
+/*---------------------------------------------
+* radio Component
+---------------------------------------------*/
+.radio{
+	
+}
+
+/*---------------------------------------------
+* progress Component
+---------------------------------------------*/
+.progress{
+	
+}
