--- a/framework/css/components.css
+++ b/framework/css/components.css
@@ -96,3 +96,23 @@
 .progress{
 	
 }
+
+/*---------------------------------------------
+* progress Component
+---------------------------------------------*/
+
+.list{
+    border: 1px solid #ccc;
+    border-radius: 4px;
+} 	
+       
+.list > .list-item{
+    padding: 13px 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.list > .list-item:last-child{
+    border-bottom: none;
+    border-radius: 4px;
+}
+
