--- a/framework/css/standard.css
+++ b/framework/css/standard.css
@@ -37,6 +37,14 @@ h6 {
 }
 
 /*---------------------------------------------
+* Tag (a) Link Elements
+---------------------------------------------*/
+a{
+   text-decoration: none;
+}
+
+
+/*---------------------------------------------
 * Block Elements
 ---------------------------------------------*/
 .container{
