--- a/framework/css/menus.css
+++ b/framework/css/menus.css
@@ -17,6 +17,12 @@
     left: 0px;
 }
 
+.menu-position-absolute{
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
 .menu-link{
     text-decoration: none;
 }
