--- a/framework/css/standard.css
+++ b/framework/css/standard.css
@@ -43,6 +43,26 @@ a{
    text-decoration: none;
 }
 
+a:link{
+   text-decoration: none;
+}
+
+a:hover{
+   text-decoration: none;
+}
+
+a:active{
+   text-decoration: none;
+}
+
+a:visited{
+   text-decoration: none;
+}
+
+a:visited{
+   text-decoration: none;
+}
+
 
 /*---------------------------------------------
 * Block Elements
