--- a/framework/css/standard.css
+++ b/framework/css/standard.css
@@ -1,37 +1,37 @@
 /*---------------------------------------------
 * Elements Standard
 ---------------------------------------------*/
-body{
+*{
 	padding: 0px;
 	margin: 0px;
 }
 
-h1 { 
+h1{ 
 	font-size: 25px;
 	font-weight: bold;
 }
 
-h2 { 
+h2{ 
 	font-size: 23px;
 	font-weight: bold;
 }
 
-h3 { 
+h3{ 
 	font-size: 19px;
 	font-weight: bold;
 }
 
-h4 { 
+h4{ 
 	font-size: 17px;
 	font-weight: bold;
 }
 
-h5 { 
+h5{ 
 	font-size: 13px;
 	font-weight: bold;
 }
 
-h6 { 
+h6{ 
 	font-size: 11px;
 	font-weight: bold;
 }
