--- a/framework/css/utilities.css
+++ b/framework/css/utilities.css
@@ -1,54 +1,54 @@
 /*---------------------------------------------
 * Text Alignment
 ---------------------------------------------*/
-.text-left{
+.gp-text-left{
 	text-align: left;
 }
 
-.text-right{
+.gp-text-right{
 	text-align: right;
 }
 
-.text-center{
+.gp-text-center{
 	text-align: center;
 }
 
-.text-justify{
+.gp-text-justify{
 	text-align: justify;
 }
 
 /*---------------------------------------------
 * Rounded Edges
 ---------------------------------------------*/
-.border-radius{
+.gp-border-radius{
 	border-radius: 4px;
 }
 
-.border-radius-2x{
+.gp-border-radius-2x{
 	border-radius: 8px;
 }
 
-.border-radius-3x{
+.gp-border-radius-3x{
 	border-radius: 16px;
 }
 
-.border-radius-50{
+.gp-border-radius-50{
 	border-radius: 100%;
 }
 
-.border-radius-100{
+.gp-border-radius-100{
 	border-radius: 100%;
 }
 
 /*---------------------------------------------
 * Border Style
 ---------------------------------------------*/
-.border{
+.gp-border{
     border-width: 1px;  
     border-style: solid;
 }
 
-.border-only-left{
+.gp-border-only-left{
 	border-style: solid;
     border-left-width: 1px;
     border-right-width: 0px;
@@ -56,7 +56,7 @@
     border-bottom-width: 0px;
 }
 
-.border-only-right{
+.gp-border-only-right{
 	border-style: solid;
     border-left-width: 0px;
     border-right-width: 1px;
@@ -64,7 +64,7 @@
     border-bottom-width: 0px;
 }
 
-.border-only-top{
+.gp-border-only-top{
 	border-style: solid;
     border-left-width: 0px;
     border-right-width: 0px;
@@ -72,7 +72,7 @@
     border-bottom-width: 0px;
 }
 
-.border-only-bottom{
+.gp-border-only-bottom{
 	border-style: solid;
     border-left-width: 0px;
     border-right-width: 0px;
@@ -84,11 +84,11 @@
 /*---------------------------------------------
 * Marking Style
 ---------------------------------------------*/
-.brand{
+.gp-brand{
 	padding: 0px 3px;
 }
 
-.brand-background{
+.gp-brand-background{
 	background: #e6e600;
 	color: #999900;
 }
@@ -96,59 +96,59 @@
 /*---------------------------------------------
 * Text transform
 ---------------------------------------------*/
-.text-lowercase {
+.gp-text-lowercase {
 	text-transform: lowercase;
 }
 
-.text-uppercase {
+.gp-text-uppercase {
 	text-transform: uppercase;
 }
 
-.text-italic{
+.gp-text-italic{
 	font-style: italic;
 }
 
-.text-bold{
+.gp-text-bold{
 	font-weight: bold;
 }
 
-.text-normal{
+.gp-text-normal{
 	font-style: normal;
 	text-decoration
 }
 
-.text-overline{
+.gp-text-overline{
 	text-decoration: overline;
 }
 
-.text-line-through{
+.gp-text-line-through{
 	text-decoration: line-through;
 }
 
-.text-underline{
+.gp-text-underline{
 	text-decoration: underline;
 }
 
-.text-underline-overline{
+.gp-text-underline-overline{
 	text-decoration: underline overline;
 }
 
 /*---------------------------------------------
 * Elements visible And invisible And show And hiddle
 ---------------------------------------------*/
-.element-visible{
+.gp-element-visible{
     visibility: visible !important;
 }
 
-.element-invisible{
+.gp-element-invisible{
     visibility: hidden !important;
 }
 
-.element-show{
+.gp-element-show{
     display: block;
 }
 
-.element-hiddle{
+.gp-element-hiddle{
     display: none;
 }
 
