--- a/framework/css/menus.css
+++ b/framework/css/menus.css
@@ -52,6 +52,10 @@
     
 }
 
+.gp-sidebar-item:hover{
+    
+}
+
 .gp-sidebar-item-group{
     
 }
@@ -63,3 +67,4 @@
 .gp-sidebar-item-text{
     
 }
+
