--- a/framework/css/menus.css
+++ b/framework/css/menus.css
@@ -46,6 +46,7 @@
 ---------------------------------------------*/
 .gp-sidebar{
     width: 300px;
+    display: none;
 }
 
 .gp-sidebar-item{
@@ -57,7 +58,7 @@
 }
 
 .gp-sidebar-item:active{
-    background: rgba(0, 0, 0, .3);
+    background: rgba(0, 0, 0, .2);
 }
 
 .gp-sidebar-item-group{
