--- a/framework/css/standard.css
+++ b/framework/css/standard.css
@@ -9,31 +9,43 @@
 h1{ 
 	font-size: 25px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 h2{ 
 	font-size: 23px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 h3{ 
 	font-size: 19px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 h4{ 
 	font-size: 17px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 h5{ 
 	font-size: 13px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 h6{ 
 	font-size: 11px;
 	font-weight: bold;
+	margin-bottom: 10px;
+	margin-top: 15px;
 }
 
 /*---------------------------------------------
